ubiquity (2.7.13) UNRELEASED; urgency=low

  * Change the forward button text to Continue. Thanks to Matthew Paul
    Thomas for the suggestion.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 13 Jul 2011 10:46:22 +0100

ubiquity (2.7.12) oneiric; urgency=low

  * Update disable_autologin to match current user-setup-apply, including
    lxdm and lightdm handling (LP: #806247).
  * Upgrade to indicator-0.4.

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 09 Jul 2011 16:52:42 +0100

ubiquity (2.7.11) oneiric; urgency=low

  [ Luke Yelavich ]
  * Use at-spi2 dbus launcher to start the at-spi2 daemon
  * Determine accessibility state from gsettings using the gsettings command,
    to make sure privileges are dropped

  [ Colin Watson ]
  * Handle the case where one of the packages returned by 'pyversions -s' or
    'py3versions -s' is not installed (LP: #806349).
  * Add --config=Mode:0644 to debconf-copydb call, as otherwise we leave
    /var/cache/debconf/config.dat mode 0600 in the installed system,
    breaking the first run of some package management frontends
    (LP: #442941).
  * Provide build-arch and build-indep debian/rules targets.
  * Automatic update of included source packages: console-setup
    1.57ubuntu21, flash-kernel 2.28ubuntu26.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 07 Jul 2011 23:28:05 +0100

ubiquity (2.7.10) oneiric; urgency=low

  * Fix reversed calls to enable_download_updates and set_download_updates,
    broken in 2.7.9 (LP: #800261).
  * Recreate .pyc modules excluded from the live filesystem.
  * Automatic update of included source packages: grub-installer
    1.64ubuntu3, user-setup 1.28ubuntu16.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 22 Jun 2011 13:52:45 +0100

ubiquity (2.7.9) oneiric; urgency=low

  [ Colin Watson ]
  * Use pycompile (python-minimal) rather than py_compilefiles
    (python-central).
  * Add lightdm to lists of display managers in Upstart jobs (LP: #798328).